# bazel-playground

./: .bazelrc  .editorconfig  .gitignore  README.md  WORKSPACE  bazel.sh
android/databinding_workers/: BUILD.bazel  gen_android_binary.bzl
android/mulitplexing_workers/: BUILD.bazel
classpath/: A.kt  A_Java.java  B.kt  BUILD.bazel  B_Java.java  C.kt  C_Java.java  D.kt  D_Java.java  E.kt  E_Java.java
kotlin/lib/: BUILD.bazel
kotlin/lib/src/main/kotlin/dev/arunkumar/dagger/: Library.kt
plugins/: BUILD.bazel
project_views/: default.bazelproject
tools/android/: version.txt
tools/databinding/: BUILD.bazel
tools/generated_sources_collector/: generated_sources_collector.bzl
