load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//plugins:anvil_library",
        "//plugins:dagger",
        "//plugins:scabbard_plugin",
        "@maven//:javax_inject_javax_inject",
    ],
)
